--- a/src/Backend/.env
+++ b/src/Backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=your  url
+MONGODB_URI=mongodb+srv://taskmanager:taskmanager@cluster0.pjhp1qs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=Hy7NxKjP2mR9vQ4tL8wX3sE5bA1cD6gF
 PORT=5000
