--- a/src/Backend/.env
+++ b/src/Backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb+srv://task:task@cluster0.kzckifi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI=""
 JWT_SECRET=Hy7NxKjP2mR9vQ4tL8wX3sE5bA1cD6gF
 PORT=5000
